[init] adapt to macos

--- a/atari_games.ipynb
+++ b/atari_games.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -46,7 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install \"stable-baselines3[extra]>=2.0.0a4\""
+    "#!pip install \"stable-baselines3[extra]>=2.0.0a4\""
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -92,13 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "TgjfyOTPVxG6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A.L.E: Arcade Learning Environment (version 0.8.1+53f58b7)\n",
+      "[Powered by Stella]\n"
+     ]
+    }
+   ],
    "source": [
     "# There already exists an environment generator that will make and wrap atari environments correctly.\n",
     "env = make_atari_env(\"PongNoFrameskip-v4\", n_envs=4, seed=0)\n",
@@ -108,13 +117,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "f3K4rMXwimBO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n",
+      "Wrapping the env in a VecTransposeImage.\n",
+      "------------------------------------\n",
+      "| time/                 |          |\n",
+      "|    fps                | 36       |\n",
+      "|    iterations         | 100      |\n",
+      "|    time_elapsed       | 54       |\n",
+      "|    total_timesteps    | 2000     |\n",
+      "| train/                |          |\n",
+      "|    entropy_loss       | -1.63    |\n",
+      "|    explained_variance | -0.0358  |\n",
+      "|    learning_rate      | 0.0007   |\n",
+      "|    n_updates          | 99       |\n",
+      "|    policy_loss        | 0.101    |\n",
+      "|    value_loss         | 0.00414  |\n",
+      "------------------------------------\n",
+      "------------------------------------\n",
+      "| rollout/              |          |\n",
+      "|    ep_len_mean        | 3.62e+03 |\n",
+      "|    ep_rew_mean        | -20.2    |\n",
+      "| time/                 |          |\n",
+      "|    fps                | 59       |\n",
+      "|    iterations         | 200      |\n",
+      "|    time_elapsed       | 67       |\n",
+      "|    total_timesteps    | 4000     |\n",
+      "| train/                |          |\n",
+      "|    entropy_loss       | -1.73    |\n",
+      "|    explained_variance | -39      |\n",
+      "|    learning_rate      | 0.0007   |\n",
+      "|    n_updates          | 199      |\n",
+      "|    policy_loss        | 0.0197   |\n",
+      "|    value_loss         | 0.0071   |\n",
+      "------------------------------------\n",
+      "------------------------------------\n",
+      "| rollout/              |          |\n",
+      "|    ep_len_mean        | 3.62e+03 |\n",
+      "|    ep_rew_mean        | -20.2    |\n",
+      "| time/                 |          |\n",
+      "|    fps                | 73       |\n",
+      "|    iterations         | 300      |\n",
+      "|    time_elapsed       | 81       |\n",
+      "|    total_timesteps    | 6000     |\n",
+      "| train/                |          |\n",
+      "|    entropy_loss       | -1.76    |\n",
+      "|    explained_variance | -0.0122  |\n",
+      "|    learning_rate      | 0.0007   |\n",
+      "|    n_updates          | 299      |\n",
+      "|    policy_loss        | 0.0426   |\n",
+      "|    value_loss         | 0.000731 |\n",
+      "------------------------------------\n",
+      "------------------------------------\n",
+      "| rollout/              |          |\n",
+      "|    ep_len_mean        | 3.34e+03 |\n",
+      "|    ep_rew_mean        | -20.6    |\n",
+      "| time/                 |          |\n",
+      "|    fps                | 85       |\n",
+      "|    iterations         | 400      |\n",
+      "|    time_elapsed       | 93       |\n",
+      "|    total_timesteps    | 8000     |\n",
+      "| train/                |          |\n",
+      "|    entropy_loss       | -1.72    |\n",
+      "|    explained_variance | 0.00874  |\n",
+      "|    learning_rate      | 0.0007   |\n",
+      "|    n_updates          | 399      |\n",
+      "|    policy_loss        | -0.0094  |\n",
+      "|    value_loss         | 0.0453   |\n",
+      "------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "model = A2C(\"CnnPolicy\", env, verbose=1)\n",
     "model.learn(total_timesteps=10_000)"
@@ -287,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   },
   "vscode": {
    "interpreter": {
